fix alignment of active view indicators in header

--- a/app/components/Header/style.css
+++ b/app/components/Header/style.css
@@ -17,6 +17,9 @@ header {
     font-weight: normal;
     color: #414141;
     .beta {
+      vertical-align: bottom;
+      position: relative;
+      top: -5px;
       font-style: italic;
     }
   }
